@@ -17,6 +17,7 @@ Version 1.8.0+svn:
 
  * User interface:
    * Fixed bug #15716: Lobby crash when refreshing with filtered out games.
+   * Fixed bug #14730: Tab completion not working in the new lobby.
 
 
 Version 1.8.0:
