@@ -18,6 +18,7 @@ Version 1.8.0+svn:
    * Fixed the ping timeout not waiting for the default ping interval when
      ping timeout is not set to 0
    * Strip whitespace characters from .ign patterns (bug #15902)
+   * Fixed tab completion not working in the new lobby (bug #14730)
 
 Version 1.8.0:
  * AI:
